# RemoteCar-Service

./: CMakeLists.txt  README.md
src/: main.cpp
src/entity/: Car.hpp  Person.h
src/model/: Car.hpp  Person.h  car.hpp  person.h
src/models/: car.hpp  person.h
src/module/: Module.hpp  ModuleManager.hpp
src/service/: CarProvideService.hpp  WebSocketServerService.hpp
src/util/: IdGenerator.hpp
src/utils/: color.hpp
